@@ -23,6 +23,9 @@ build ctwm.  See the `README` file for how to run it.
 1. The `f.source` function has been removed.  It's never done anything
    (except beep) as far back as 1.1 and has never been documented.
 
+1. The NoVersion config parameter has been removed.  It's been
+   undocumented, obsoleted, and done absolutely nothing since 1.1.
+
 ### User Visible Changes
 
 1. Selected a number of cleanups from Stefan Monnier
